# FuzzTrigger

./: CMakeLists.txt  Makefile  README.md  compile_to_ir_auto  compile_to_ir_manually  wllvm_commands.txt
examples/llvm/: CMakeLists.txt  main.cc
examples/llvm/cfg/: .get_line_len.dot  .initialize_array.dot  .print_characters.dot
examples/sandbox/auto/: fuzz_main.cc
scripts/: compile_autofuzz_to_ir_manually  compile_fuzztrigger_to_ir_manually  compile_fuzztrigger_to_ir_wllvm  install_dependencies
scripts/compilation/: compile  compile.py  interpret  interpret.py  link  link.py  start_compilation
src/: analysis.cc  analysis.h  cfg.cc  cfg.h  main.cc  module.cc  module.h  options.h  pass_launcher.h  sanitizer.cc  sanitizer.h  type.h  utils.cc  utils.h
src/analysis/: analysis.cc  analysis.h  ir_compiler.cc  ir_compiler.h  module.cc  pass_launcher.cc  pass_launcher.h
src/file/: file.cc  file.h  virtual_mapper.cc  virtual_mapper.h
src/generator/: frontend_action.cc  frontend_action.h  fuzzer_generator.cc  fuzzer_generator.h
src/llvm/: pass_launcher.cc  pass_launcher.h
src/llvm/analysis/: analysis.cc  analysis.h  cfg.h
src/llvm/generator/: frontend_action.cc  frontend_action.h  full_source_parser.cc  full_source_parser.h  function_declaration.cc  function_declaration.h  fuzzer_generator.cc  fuzzer_generator.h  name_corrector.cc  name_corrector.h  sanitizer.cc  sanitizer.h  single_function_source_parser.cc  single_function_source_parser.h
src/log/: logger.h
src/ml/: call_oracle  fuzzer_parameters_dataset.csv  ml_oracle.cc  ml_oracle.h
src/system/: compiler.cc  compiler.h  file.cc  file.h  source_wrapper.cc  source_wrapper.h  virtual_mapper.cc  virtual_mapper.h
src/wrapper/: project_wrapper.cc  project_wrapper.h  source_wrapper.cc  source_wrapper.h  wrapper.cc  wrapper.h
test/: cfg.cc  main.cc
test/fuzzing/libcurl/: compile_to_ir_auto
test/fuzzing/sandbox/auto/: compile_fuzzer
test/heartbleed/: compile_fuzzer  fuzz_openssl.cc  run_fuzzer
test/heartbleed/openssl/: compile_openssl
test/launch/: sanitize_cookie_path.c  test_main.c
test/launch/project/: compile_to_ir  compile_to_ir_auto  copy_input.c  copy_input.h  sanitize_cookie_path.c  sanitize_cookie_path.h
test/llvm/cfg/: .initialize_struct.dot  .un_init.dot
test/llvm_pass/: compile_to_ir  main.cc  test_main.c  test_main.ll
test/llvm_pass/cfg/: .is_valid.dot  .main.dot  generate_cfg
test/project/libcurl/: full_compilation  wllvm_trial
test/sandbox/auto/: run_fuzzer
test/sandbox/manual/: compile_main  main.c  run_main
test/source/: sanitize_cookie_path.c  test_main.c
test/source/project/: CMakeLists.txt  main.c
